fixed titlebar alignment

--- a/screen.css
+++ b/screen.css
@@ -143,7 +143,7 @@ ul {
     }
 
     .titletext {
-	max-width: 80%;
+	max-width: 74%;
     }
 
     h1 {
